<resources>
    <string name="action_recertify">Recertify Lot</string>
    <string name="action_training">Training images</string>
    <string name="action_sampling">Sampling images</string>
    <string name="action_settings">Settings</string>
    <string name="capture_image">Capture New\nImage</string>
    <string name="lot_id">Lot ID</string>
    <string name="sample_id">Sample ID</string>
    <string name="image_id">Image ID</string>
    <string name="save_and_next">Save and Next</string>
    <string name="could_not_open_camera">Could not open camera</string>
    <string name="could_not_capture">Could not capture new image. Please try again. Check internal memory space if issue persists.</string>
    <string name="please_capture_image">Please capture an image</string>
    <string name="external_storage_not_writable">External storage not writable</string>
    <string name="failed_directory_creation">Failed to create images folder. Please try again. Check internal memory space if issue persists.</string>
    <string name="image_save_success">Image Saved Successfully</string>
    <string name="image_log_save_failed">Failed To Save Image Log. App Will be restarted</string>
    <string name="image_id_missing">Image ID missing</string>
    <string name="sample_id_missing">Sample ID missing</string>
    <string name="could_not_create_image_file">Could not create image file. Please try again. Check internal memory space if issue persists.</string>
    <string name="rename_failed">Failed to rename image</string>
    <string name="temp_file_does_not_exist">Temporary image file does not exist</string>
    <string name="file_already_exits">Image with the given name already exits</string>
    <string name="image_uri_not_found">Image uri not found</string>
    <string name="could_not_load_image">Could not load image</string>
    <string name="success_title">Success</string>
    <string name="success_msg">Image has been saved successfully. Image counter will be updated automatically.</string>
    <string name="fail_title">Failed</string>
    <string name="fail_save_log_msg">Failed to save image log. Please try again. Check internal memory space if issue persists.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rectify">Rectify</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirm Exit</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="temp_image_file_not_found">Image file not found. Please capture the image again. Check internal memory space if issue persists.</string>
    <string name="enter_lot_id">Enter Lot ID</string>
    <string name="enter_sample_id">Enter Sample ID</string>
    <string name="enter_image_id">Enter Image ID</string>
    <string name="input_lot_id" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890</string>
    <string name="input_sample_id" translatable="false">123456789</string>
    <string name="please_capture_in_landscape">Please capture in landscape mode</string>
    <string name="please_keep_phone_horizontal">Please keep your phone horizontal</string>
    <string name="enter_lot_to_rectify">Enter Lot ID to recertify</string>
    <string name="lot_id_cannot_be_blank">Lot ID cannot be blank</string>
    <string name="lot_id_does_not_exist">Lot ID does not exist</string>
    <string name="lot_id_under_rectification_already">Lot ID already under recertification</string>
    <string name="recertify">Recertify</string>
    <string name="set_camera_angle_title">Set Camera Angle</string>
    <string name="set_camera_angle_message">Set max allowed camera angle</string>
    <string name="max_allowed_camera_angle">Max allowed camera angle</string>
    <string name="marker_type">Marker Type</string>
    <string name="enter_marker_type">Enter marker type</string>
    <string name="value_cannot_be_blank">Value cannot be blank</string>
    <string name="select_defect">Select Sample</string>
    <string name="select_variety">Select Variety</string>
    <string name="controlled">Controlled</string>
    <string name="uncontrolled">Uncontrolled</string>
    <string name="defect_value">Sample - %1$s</string>
    <string name="variety_value">Variety - %1$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_capture_training">Training</string>
    <string name="defect_not_selected">Please select a sample</string>
    <string name="variety_not_selected">Please select a variety</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_text">Touch to focus, and press the blue camera button to take photos. For more help, click Online help from Settings. Open Camera is completely free. If you like this app, please consider buying my donate app :) (see link in Settings, or Online help).\n\nPrivacy Policy: Location permission is required for geotagging, but this is disabled by default. If enabled, your location is encoded in the saved files (and it is only used for this purpose).</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure Locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_burst_mode">Cancelled burst mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="color_effect">Color effect</string>
    <string name="scene_mode">Scene mode</string>
    <string name="white_balance">White balance</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free</string>
    <string name="screen_lock_message_1">[LOCKED:</string>
    <string name="screen_lock_message_2">Swipe to unlock]</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="metres_abbreviation">m</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-level</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_summary">Set a timer for the camera</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for burst mode delay</string>
    <string name="preference_timer_speak">Voice timer countdown</string>
    <string name="preference_timer_speak_summary">Speak the countdown for timer or burst mode delay (from 60 seconds)</string>
    <string name="preference_burst_mode">Burst</string>
    <string name="preference_burst_mode_summary">Take multiple photos in succession</string>
    <string name="preference_burst_interval">Burst mode interval</string>
    <string name="preference_burst_interval_summary">Delay (if any) between taking photos in burst mode</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
</resources>