<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="preference_max_camera_angle"
        android:title="@string/max_allowed_camera_angle"
        android:summary="12"
        android:dialogTitle="@string/set_camera_angle_title"
        android:inputType="number"
        android:defaultValue="12"
        />

    <EditTextPreference
        android:key="preference_marker_type"
        android:title="@string/marker_type"
        android:summary="RS175"
        android:dialogTitle="@string/enter_marker_type"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM123456789"
        android:defaultValue="RS175"
        />

</PreferenceScreen>