<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding"
    tools:context="com.agricx.app.agricximagecapture.ui.fragment.RectifyLotFragment"
    >

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_lot_to_rectify"
        android:paddingLeft="2dp"
        />

    <EditText
        android:id="@+id/etRecertifyLotId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_lot_id"
        android:layout_marginTop="@dimen/small_margin"
        />

    <Button
        android:id="@+id/btnRecertify"
        style="@style/Button.Positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/recertify"
        />

</LinearLayout>
