<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_capture_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.agricx.app.agricximagecapture.ui.activity.CaptureSampleActivity"
    tools:showIn="@layout/activity_capture_sample"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding"
            >

            <include layout="@layout/view_capture"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:orientation="horizontal"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    >

                    <EditText
                        android:id="@+id/act_sample_capture_et_lot_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/input_lot_id"
                        android:hint="@string/lot_id"
                        android:inputType="text|textNoSuggestions"
                        android:maxLength="@integer/max_len_lot_id"
                        />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/act_sample_capture_b_enter_lot_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/touch_selector"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/very_small_margin"
                android:orientation="horizontal"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    >

                    <EditText
                        android:id="@+id/act_capture_sample_et_sample_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/input_sample_id"
                        android:hint="@string/sample_id"
                        android:inputType="number"
                        android:maxLength="@integer/max_len_sample_id"
                        />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/act_sample_capture_b_enter_sample_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/touch_selector"
                    />

            </LinearLayout>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_to_medium_margin"
                android:padding="@dimen/very_small_padding"
                android:text="@string/image_id"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/act_base_capture_tv_image_id"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/very_small_margin"
                android:layout_marginRight="@dimen/very_small_margin"
                android:background="@drawable/border_tv"
                android:padding="@dimen/small_margin"
                tools:text="1234"
                />

            <Button
                android:id="@+id/act_base_capture_b_save_next"
                style="@style/Button.Positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_to_large_margin"
                android:background="@drawable/shape_button"
                android:text="@string/save_and_next"
                android:textStyle="bold"
                />

        </LinearLayout>

        <include layout="@layout/view_progress"/>

    </FrameLayout>


</ScrollView>
